# adventofcode2024

1/: Makefile  distance  main.c
2/: Makefile  main.c  process_reports
4/: Makefile.am  configure.ac
4/src/: Makefile.am  lib.c  lib.h  logger.c  logger.h  main.c
4/tests/: Makefile.am  check_main.c
